<resources>
    <string name="app_name">Binaural Beats App</string>

    <string name="button_sleep">Sleep (theta)</string>
    <string name="button_focus">Focus (gamma)</string>
    <string name="button_creativity">Creativity (delta)</string>
    <string name="stop">Stop</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="title_activity_nature_sounds">NatureSounds</string>
    <string name="rainforest_button">Rainforest</string>
    <string name="thunderstorm_button">Thunderstorm</string>

</resources>
