<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.binauralbeatsapp.MainActivity">


    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_sleep"
        android:textAllCaps="false"
        android:id="@+id/sleep_button"
        android:onClick="playTheta" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_focus"
        android:textAllCaps="false"
        android:id="@+id/focus_button"
        android:onClick="playGamma" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_creativity"
        android:textAllCaps="false"
        android:id="@+id/creativity_button"
        android:onClick="playDelta" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/stop"
        android:textAllCaps="false"
        android:id="@+id/stop_button"
        android:onClick="stop" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/volumeBar"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sleep_timer"
        android:onClick="setSleepTime" />



</LinearLayout>
